# cmake-examples

./: CMakeLists.txt  sonar-project.properties
.github/workflows/: build_sonar.yml  folders_build_sonar.txt
01-basic/: CMakeLists.txt
02-sub-projects/: CMakeLists.txt
03-code-generation/: CMakeLists.txt
04-static-analysis/: CMakeLists.txt
05-unit-testing/: CMakeLists.txt
06-installer/: CMakeLists.txt
07-package-management/: CMakeLists.txt
