cmake_minimum_required (VERSION 3.5)

project(cmake_example_projects)

# Add sub directories
add_subdirectory(01-basic)
add_subdirectory(02-sub-projects)
add_subdirectory(03-code-generation)
add_subdirectory(04-static-analysis)
add_subdirectory(05-unit-testing)
add_subdirectory(06-installer)
add_subdirectory(07-package-management)
